feat: add new features and improve UI

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://images.pexels.com/photos/25626/pexels-photo-25626.jpg?auto=compress&cs=tinysrgb&w=32&h=32&fit=crop&crop=center" />
+    <link rel="icon" type="image/png" href="/Favicone.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RepoCard - GitHub Repository Report Generator</title>
   </head>
